--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,7 +1,7 @@
 # super/meta/win key
 set $mod Mod4
 
-exec_always swaybg -i ~/Polarnight_c.jpg
+exec swaybg -i ~/Polarnight_c.jpg
 # exec_always swaybg -i ~/glorious\ leo.jpg
 exec autotiling-rs
 
