feat(yazi): s to rg, S to shell

--- a/.config/yazi/keymap.toml
+++ b/.config/yazi/keymap.toml
@@ -75,8 +75,8 @@ keymap = [
 	{ on = ";",         run = "shell --interactive",         desc = "Run a shell command" },
 	{ on = ":",         run = "shell --block --interactive", desc = "Run a shell command (block until finishes)" },
 	{ on = ".",         run = "hidden toggle",               desc = "Toggle the visibility of hidden files" },
-	{ on = "s",         run = "search fd",                   desc = "Search files by name using fd" },
-	{ on = "S",         run = "search rg",                   desc = "Search files by content using ripgrep" },
+	{ on = "s",         run = "search rg",                   desc = "Search files by content using ripgrep" },
+	{ on = "S", run = 'shell "$SHELL" --block --confirm', desc = "Open shell here" },
 	{ on = "<C-s>",     run = "escape --search",             desc = "Cancel the ongoing search" },
 	{ on = "z",         run = "plugin zoxide",               desc = "Jump to a directory using zoxide" },
 	{ on = "Z",         run = "plugin fzf",                  desc = "Jump to a directory or reveal a file using fzf" },
