--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -14,8 +14,8 @@ print_info() {
     info "DE" de
     info "WM" wm
     info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
+    # info "Theme" theme
+    # info "Icons" icons
     info "Terminal" term
     info "Terminal Font" term_font
     info "CPU" cpu
@@ -28,7 +28,7 @@ print_info() {
     # info "Font" font
     # info "Song" song
     # [[ "$player" ]] && prin "Music Player" "$player"
-    # info "Local IP" local_ip
+    info "Local IP" local_ip
     # info "Public IP" public_ip
     # info "Users" users
     # info "Locale" locale  # This only works on glibc systems.
