--- a/.config/sway/config
+++ b/.config/sway/config
@@ -52,6 +52,7 @@ for_window [app_id="armcord"] move to workspace $ws4
 for_window [app_id="thunar"] floating enable
 for_window [app_id="TorGuard"] floating enable
 for_window [app_id="kitty"] blur enable
+for_window [app_id="dev.zed.Zed"] blur enable
 
 # hide titlebar if not tabbed
 for_window [app_id="^.*"] border pixel 3
@@ -60,6 +61,7 @@ input "2:14:ETPS/2_Elantech_Touchpad" {
     tap enabled
     natural_scroll enabled
     middle_emulation enabled
+    dwt disabled
 }
 
 # nice (no not the priority thing)
