feat(btop): changed cfg

--- a/.config/btop/btop.conf
+++ b/.config/btop/btop.conf
@@ -72,7 +72,7 @@ proc_colors = True
 proc_gradient = True
 
 #* If process cpu usage should be of the core it's running on or usage of the total available cpu power.
-proc_per_core = True
+proc_per_core = False
 
 #* Show process memory as bytes instead of percent.
 proc_mem_bytes = True
@@ -94,11 +94,11 @@ proc_aggregate = False
 
 #* Sets the CPU stat shown in upper half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_upper = "Auto"
+cpu_graph_upper = "total"
 
 #* Sets the CPU stat shown in lower half of the CPU graph, "total" is always available.
 #* Select from a list of detected attributes from the options menu.
-cpu_graph_lower = "Auto"
+cpu_graph_lower = "iowait"
 
 #* If gpu info should be shown in the cpu box. Available values = "Auto", "On" and "Off".
 show_gpu_info = "Auto"
