feat(sway): bye bye armcord

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -47,7 +47,7 @@ for_window [app_id="cachy-browser"] move to workspace $ws2
 for_window [class="steam"] move to workspace $ws5
 for_window [app_id="TorGuard"] move to workspace $ws5
 for_window [app_id="osu!"] move to workspace $ws6
-for_window [app_id="armcord"] move to workspace $ws4
+for_window [app_id="vesktop"] move to workspace $ws4
 
 for_window [app_id="thunar"] floating enable
 for_window [app_id="TorGuard"] floating enable
