feat(sway): change wallpaper
source: https://www.pixiv.net/en/artworks/36919122

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,7 +1,8 @@
 # super/meta/win key
 set $mod Mod4
 
-output * bg ~/Polarnight_c.jpg fill
+# output * bg ~/Polarnight_c.jpg fill
+output * bg ~/chiptune_hell.jpg fill
 # exec_always swaybg -i ~/glorious\ leo.jpg
 exec autotiling-rs
 
