--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -5,6 +5,8 @@ allow_remote_control yes
 
 font_size 9.5
 
+scrollback_pager page
+
 remember_window_size no
 initial_window_width 144c
 initial_window_height 36c
