--- a/.config/sway/config
+++ b/.config/sway/config
@@ -42,16 +42,11 @@ bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
 # move applications to workspaces
-for_window [app_id="firefox"] move to workspace $ws2
-for_window [app_id="Brave-browser"] move to workspace $ws2
-for_window [app_id="cachy-browser"] move to workspace $ws2
+for_window [app_id="LibreWolf"] move to workspace $ws2
 for_window [class="steam"] move to workspace $ws5
-for_window [app_id="TorGuard"] move to workspace $ws5
-for_window [app_id="osu!"] move to workspace $ws6
 for_window [app_id="vesktop"] move to workspace $ws4
 
 for_window [app_id="thunar"] floating enable
-for_window [app_id="TorGuard"] floating enable
 for_window [app_id="kitty"] blur enable
 for_window [app_id="dev.zed.Zed"] blur enable
 
@@ -133,10 +128,10 @@ bindsym $mod+v split v
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+# # change container layout (stacked, tabbed, toggle split)
+# bindsym $mod+s layout stacking
+# bindsym $mod+w layout tabbed
+# bindsym $mod+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
