--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -10,7 +10,7 @@ initial_window_width 144c
 initial_window_height 36c
 
 tab_bar_min_tabs 2
-tab_bar_edge top
+tab_bar_edge bottom
 tab_bar_style powerline
 tab_title_template {index} {title}
 
@@ -26,6 +26,8 @@ map alt+7 goto_tab 7
 map alt+8 goto_tab 8
 map alt+9 goto_tab 9
 map alt+0 goto_tab 10
+
+close_on_child_death yes
 
 include current-theme.conf
 
