--- a/.config/sway/config
+++ b/.config/sway/config
@@ -81,6 +81,10 @@ font pango:Lexend 11
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment sway
 exec mako
+# ARTIX FIX: systemd --user handled this originally.
+exec pipewire
+exec pipewire-pulse
+exec wireplumber
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -163,10 +167,10 @@ bindsym $mod+r mode "resize"
 
 # or... make a power menu in waybar properly?
 mode "power" {
-    bindsym s exec ~/.config/sway/lock.sh, mode "default", exec systemctl suspend
+    bindsym s exec ~/.config/sway/lock.sh, mode "default", exec loginctl suspend
     bindsym l exec ~/.config/sway/lock.sh, mode "default"
-    bindsym $mod+h exec shutdown now
-    bindsym $mod+r exec reboot
+    bindsym $mod+h exec loginctl poweroff
+    bindsym $mod+r exec loginctl reboot
 
     bindsym Escape mode "default"
     bindsym Return mode "default"
