--- a/.config/sway/config
+++ b/.config/sway/config
@@ -6,6 +6,11 @@ output * bg ~/chiptune_hell_recolored.png fill
 # exec_always swaybg -i ~/glorious\ leo.jpg
 exec autotiling-rs
 
+# for GTK apps to inherit cursor: https://bbs.archlinux.org/viewtopic.php?id=278498
+# in this case, execute `gsettings set org.gnome.desktop.interface cursor-theme catppuccin-mocha-pink-cursors`
+# adjust as you see fit.
+seat seat0 xcursor_theme catppuccin-mocha-pink-cursors
+
 set $ws1 1
 set $ws2 2
 set $ws3 3
@@ -44,7 +49,7 @@ bindsym $mod+Shift+0 move container to workspace number $ws10
 # move applications to workspaces
 for_window [app_id="LibreWolf"] move to workspace $ws2
 for_window [class="steam"] move to workspace $ws5
-for_window [app_id="vesktop"] move to workspace $ws4
+for_window [app_id="legcord"] move to workspace $ws4
 
 for_window [app_id="thunar"] floating enable
 for_window [app_id="kitty"] blur enable
