fix(kitty): fix firacode font in kitty

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,5 +1,6 @@
-font_family FiraCode-Light
-bold_font FiraCode-Bold
+font_family      family="FiraCode Nerd Font"
+bold_font        auto
+# >=
 
 font_size 9.5
 
